Switched images from cover to contain to fix overlapping shadow issue, also fixed the CTA on the mpower page

--- a/src/components/custom.css
+++ b/src/components/custom.css
@@ -325,7 +325,7 @@ body [class*="contact-"] .field-YswxU4 {
 
 .mpower-mobile-320px .button-x5Sopb {
     right: calc(50% - 115px);
-    top: 380px;
+    top: 288px;
 }
 
 .mpower-tablet-720px .button-x5Sopb {
