--- a/src/import/css/partnerships-desktop-1440px.css
+++ b/src/import/css/partnerships-desktop-1440px.css
@@ -650,7 +650,7 @@
   height: calc(100.00% - 56px);
   left: 42px;
   mix-blend-mode: normal;
-  object-fit: cover;
+  object-fit: contain;
   position: absolute;
   top: 0px;
   width: calc(100.00% - 76px);
@@ -2305,7 +2305,7 @@ transform: translate(0, -5px);
   height: calc(100.00% - 56px);
   left: 69px;
   mix-blend-mode: normal;
-  object-fit: cover;
+  object-fit: contain;
   position: absolute;
   top: 0px;
   width: calc(100.00% - 130px);
@@ -3815,7 +3815,7 @@ background: #416FF4;
   height: calc(100.00% - 56px);
   left: 14px;
   mix-blend-mode: normal;
-  object-fit: cover;
+  object-fit: contain;
   position: absolute;
   top: 0px;
   width: calc(100.00% - 20px);
@@ -5259,7 +5259,7 @@ background: #416FF4;
   height: calc(100.00% - 56px);
   left: 42px;
   mix-blend-mode: normal;
-  object-fit: cover;
+  object-fit: contain;
   position: absolute;
   top: 0px;
   width: calc(100.00% - 76px);
